<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stratecsa.app.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_zona" />

    <fragment
        android:id="@+id/navigation_notificacion"
        android:name="com.stratecsa.app.ui.notificacion.notificacionFragment"
        android:label="@string/notificacion"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_zona"
        android:name="com.stratecsa.app.ui.zona.ZonaFragment"
        android:label="@string/zona"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_prueba"
        android:name="com.stratecsa.app.ui.Prueba.pruebaFragment"
        android:label="@string/pruebas"
        tools:layout="@layout/fragment_prueba" />

</navigation>